# ADP8

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .envrc  .gitattributes  .gitignore  .hall-local.md  404.html  ASSESSMENT.md  BUILD  BUILD.bazel  CLAUDE.md  CNAME  CODEOWNERS  LICENSE  MODULE.bazel  Porcoddio.md  README.md  dds.MODULE.bazel  index.html  mkdocs.yml  package.json  pnpm-lock.yaml  simulation.MODULE.bazel  sitemap.xml  tools.MODULE.bazel  ty.toml  zensical.toml
.devcontainer/: Dockerfile  Dockerfile.rbe  devcontainer.json  initialize_command.sh  pyproject.toml
.devcontainer/scripts/: .Brewfile  bootstrap.sh  clangd.sh
applications/command_interfaces/: BUILD.bazel  actuation_interface_node.cpp  map_control2actuators.cpp  map_control2actuators.hpp
applications/controls/: BUILD.bazel  control_node.cpp  dummy_control.cpp  point_follower.cpp  point_follower.hpp
applications/egomotion/: BUILD.bazel  state_estimation.cpp  state_estimation.hpp  state_estimation_node.cpp
applications/planning/: BUILD.bazel  dummy_point_planner.cpp  dummy_point_planner.hpp  planning_node.cpp
applications/teleop/: BUILD.bazel  teleop.md  teleop_node.cpp
core/: BUILD  core.MODULE.bazel  requirements.in  requirements.txt  task_interface.hpp  tasks_manager.hpp
core/bazel/: task_ports_example.yml
core/communication/: BUILD  dds_context.hpp  dds_publisher.hpp  dds_subscriber.hpp  dds_topic.hpp  size_constrained_queue.hpp  topic_spec.hpp
core/communication/bazel/: fastdds.bzl
core/communication/generators/: BUILD  dds_gen_data_models.py  dds_gen_utils.py  dds_ports_gen.bzl  dds_ports_generator.py  defs.bzl  requirements.txt  task_ports_example.yml
core/communication/test/: BUILD  BUILD.bazel  dds_context_tests.cpp  dds_pub_sub_test.cpp  dds_topic_test.cpp  size_constrained_queue_test.cpp  topic_spec_tests.cpp
core/examples/simple_chatter/: BUILD  main.cpp  node_alpha.hpp  node_alpha_ports.yml  node_beta.hpp  node_beta_ports.yml  params.yaml
core/examples/simple_chatter_pybinds/: BUILD  BUILD.bazel  main_cpp.cpp  node_cpp.hpp  node_cpp_ports.yml  node_py_ports.yml  py_node.py
core/generators/: BUILD  BUILD.bazel  cc_utils.bzl  dds_gen_utils.py  dds_ports_gen.bzl  dds_ports_generator.py  defs.bzl  fastdds_types_gen.bzl  gen_data_models.py  gen_utils.py  generators.py  parameters_gen.bzl  pybind_bridge_gen.bzl  pybind_gen_models.py  pybind_gen_utils.py  pybind_generators.py  pybind_type_gen.bzl
core/generators/templates/: dds_specs.hpp.jinja  dds_types.hpp.jinja  parameters.hpp.jinja  pybind_bridge.cpp.jinja  task_base.hpp.jinja
core/generators/test/: BUILD  BUILD.bazel  dds_gen_data_tests.py  dds_gen_utils_tests.py
core/generators/test_idls/: SystemStatus.idl
core/lifecycle/: BUILD  BUILD.bazel  data_endpoint.hpp  dds_application.hpp  dds_task.hpp  execution_engine.cpp  execution_engine.hpp  input.hpp  input_source.hpp  output.hpp  output_sink.hpp  parameters_provider.hpp  task_interface.hpp  tasks_manager.hpp  type_traits.hpp
core/lifecycle/test/: BUILD  dds_application_tests.cpp  dds_task_bench.cpp  dds_task_tests.cpp  execution_engine_tests.cpp  input_output_tests.cpp  lifecycle_fixture.hpp  parameters_provider_tests.cpp  task_manager_tests.cpp  test_parameters.yml  test_ports.yml
core/pybinds/: BUILD.bazel  py_dds_bridge.hpp
core/pybinds/test/: BUILD.bazel  node_ports.yml  py_dds_bridge_test.cpp  test_bridge_smoke.py  test_type_binding.py
core/scripts/: BUILD  dds_tasks_ports_generator.py  requirements.txt
core/support/utils/: BUILD  BUILD.bazel  black_magic_tuple_merger.hpp  lookup_table.hpp  size_constrained_queue.hpp
core/support/visit/: BUILD.bazel  property.hpp  visitable.hpp  visitor_base.hpp
gui/src/: App.tsx  BUILD.bazel  styles.css
gui/src/edges/: index.ts
gui/src/nodes/: MockFlowNode.css  MockFlowNode.tsx  MockFlowNodeConfig.ts  PositionLoggerNode.tsx  index.ts  mock_flow_node.css  mock_flow_node.tsx  nodes_catalog.ts
gui/src/sidebar/: sidebar.tsx
gui/src/utils/: connection_utils.ts
simulation/: BUILD  BUILD.bazel  README.md  car_simulation.cpp  car_state.cpp  genesis_sim_node.py  launch_sim.py  launch_sim_teleop.py  requirements.in  requirements.txt  sim_param.hpp  simulation.MODULE.bazel  simulation_entity_base.py  simulation_main.py  simulation_node.py  simulation_parameters.py  simulation_parameters.yaml  simulation_runner.py  simulation_sw_arch.drawio  spotmicro_sim_model.py  state_update.cpp  state_update.hpp
simulation/actuator_dynamics/: actuators_dynamic.hpp
simulation/agents/: BUILD.bazel  rc_car.py
simulation/car_dynamics/: car_dynamics.hpp
simulation/cpp_sim/: BUILD  BUILD.bazel  README.md  car_simulation.cpp  launch_sim.py  launch_sim_teleop.py  sim_param.hpp
simulation/py_dds_talker/: BUILD  py_dds_bridge.cpp  py_dds_bridge.hpp
simulation/py_dds_talker/generators/: BUILD  defs.bzl  pybind_bridge_gen.bzl  pybind_gen_utils.py  pybind_generators.py  pybind_type_gen.bzl
simulation/py_dds_talker/test/: BUILD  channel_message_py.cpp  chatter_bridge_py.cpp  ddsbridge_test.py  dry_run_bridge_test.py  main_cpp.cpp  node_cpp.hpp  py_mock_channel.cpp  py_node.py
simulation/py_req/: BUILD  BUILD.bazel  requirements.in  requirements.txt
simulation/py_req/test_genesis/: BUILD.bazel  test_genesis.py
simulation/py_req/test_sim_imports/: BUILD.bazel  test_sim_imports.py
simulation/rc_car_model/: BUILD.bazel  rc_car.urdf  rc_car_model.xml
simulation/robot_model/: spot.xml  spot_mini.xml
simulation/robot_model/stl/: B_cover.stl  F_cover.stl  F_cover_orig.stl  F_shoulder.stl  L_arm.stl  L_arm_cover.stl  L_arm_joint.stl  L_side_plate.stl  L_ultra_sonic.stl  L_wrist.stl  R_arm.stl  (+38 more)
simulation/sensors/: imu_model.hpp
simulation/src/: BUILD.bazel  base_entity.py  keyboard_device.py  motor_models.py  simulation_runner.py
tools/: BUILD  BUILD.bazel  README.md  fastddsgen.sh  install_buildifier.sh  install_clangd.sh  install_python.sh  requirements.txt  symlink_pip_deps.sh  system_clang_format.sh  tools.MODULE.bazel  tools.bzl
tools/system_pip/: BUILD.bazel  extensions.bzl  test_import.py  test_stub.py
(+162 files in other folders)
