[project]
name = "adp8-devcontainer"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    # simulation runtime — torch CPU-only, see [[tool.uv.index]] below
    "torch",
    "genesis-world",
]

[project.optional-dependencies]
dev = [
    # python dev tools — binaries land in .venv/bin, on PATH via ENV
    "ty",
    "ruff",
]

[tool.uv]
# This is a dependency manifest, not a publishable package.
package = false

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
