"""
this makes bazel linter happy
"""

###### Scripting deps ######
core_requirements = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
core_requirements.parse(
    hub_name = "core_requirements",
    python_version = "3.12",
    requirements_lock = "//core/scripts:requirements.txt",
)
use_repo(core_requirements, "core_requirements")
