load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

package(default_visibility = ["//visibility:public"])

exports_files([
    "fixup_compile_commands_transient.sh.in",
    "install_clangd.sh",
    "install_python.sh",
])

format_multirun(
    name = "format",
    cc = "@llvm_toolchain//:clang-format",
    shell = "@aspect_rules_lint//format:shfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
)

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements.txt",
)
