load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")
load("@rules_cc//cc:defs.bzl", "cc_library")

ros2_cpp_binary(
    name = "state_estimation_node",
    srcs = ["state_estimation_node.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        # applications
        ":state_estimation",
        # ros2 interfaces
        "//core:tasks",
        "//applications:common_utils",
        "//applications:applications_param",
        "//messages:cpp_car_msgs",
        "@ros2_rclcpp//:rclcpp",
    ],
)

cc_library(
    name = "state_estimation",
    srcs = ["state_estimation.cpp"],
    hdrs = ["state_estimation.hpp"],
    deps = [
        "//applications:common_utils",
        "//messages:cpp_car_msgs",
    ],
)
