load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")
load("@rules_cc//cc:defs.bzl", "cc_library")

ros2_cpp_binary(
    name = "planning_node",
    srcs = ["planning_node.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        # planning
        "//applications/planning:dummy_point_planner",
        # ros2 interfaces
        "//applications:common_utils",
        "//messages:cpp_car_msgs",
        "@ros2_common_interfaces//:cpp_std_msgs",
        "@ros2_common_interfaces//:cpp_geometry_msgs",
        "@ros2_rclcpp//:rclcpp",
    ],
)

cc_library(
    name = "dummy_point_planner",
    srcs = ["dummy_point_planner.cpp"],
    hdrs = ["dummy_point_planner.hpp"],
    deps = [
        "//applications:common_utils",
    ],
)
