load("@core_requirements//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "generators",
    srcs = ["generators.py"],
    deps = [":gen_utils"],
)

py_library(
    name = "gen_utils",
    srcs = [
        "gen_data_models.py",
        "gen_utils.py",
    ],
    deps = [
        requirement("idl_parser"),
        requirement("jinja2"),
        requirement("pydantic"),
        requirement("pyyaml"),
    ],
)

filegroup(
    name = "jinja_templates",
    srcs = glob(["templates/*.jinja"]),
)

### pybinds

py_binary(
    name = "pybind_generators",
    srcs = ["pybind_generators.py"],
    deps = [":pybind_gen_utils"],
)

py_library(
    name = "pybind_gen_utils",
    srcs = [
        "pybind_gen_models.py",
        "pybind_gen_utils.py",
    ],
    deps = [
        ":gen_utils",
        requirement("idl_parser"),
        requirement("pydantic"),
    ],
)
