load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//core:__subpackages__"])

cc_library(
    name = "visitable",
    srcs = [
        "property.hpp",
        "visitable.hpp",
    ],
    hdrs = [
        "property.hpp",
        "visitable.hpp",
    ],
    deps = [],
)

cc_library(
    name = "visitor_base",
    srcs = [
        "visitor_base.hpp",
    ],
    hdrs = [
        "visitor_base.hpp",
    ],
    deps = [],
)
